--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 
+	// https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-servlet-api
+	compile group: 'org.apache.tomcat', name: 'tomcat-servlet-api', version: '10.0.0-M9'
 	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
 	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
 	compile('org.springframework.boot:spring-boot-starter-web')
